--- a/docs/style_temp.css
+++ b/docs/style_temp.css
@@ -2,12 +2,24 @@
     font-family: 'MyFont';
     src: url('Assets//Roboto-Regular.woff2') format(woff2);
 }
-p{
-    background-color: #d6eaf8;
+/*
+Colors:
+
+ #85c1e9 lightblue-like
+
+variables:
+    bgcolor for body only
+    font for text
+    element for individual elements
+
+*/
+:root{
+    --bg-color: #85c1e9;
+    --font-color: #000000;
+    --element-bg-color: #d6eaf8;
 }
 h1{
-    background-color:  #d6eaf8;
-    color: black;
+    background-color:  var(--element-bg-color);
     margin: 1% auto;
     padding: 1%;
     width: max-content;
@@ -15,7 +27,7 @@ h1{
     border-radius: 8px;
 }
 nav{
-    background-color:  #d6eaf8;
+    background-color:  var(--element-bg-color);
     font-size: 100%;
     display: flex;
     text-align: center;
@@ -24,52 +36,118 @@ nav{
     padding: 1%;
     border-radius: 8px;
 }
-
 a{
-    height: auto;
+    text-decoration: none;
+    height: 100%;
     width: 100%;
-    padding: .1%;
+    padding: 1%;
 }
-
+a:link{
+    color: #08334d;
+}
+a:visited{
+    color: #08334d;
+}
+a:hover{
+    border-radius: 4px;
+    background-color: rgb(46, 46, 153,0.5);
+}
 body{
-    background-color: #85c1e9;
+    background-color: var(--bg-color);
+    color: var(--font-color);
     font-family: 'MyFont';
+    font-size: 1em;
 }
 img{
     border-radius: 4px;
-    width: 40%;
-}
-#name{
-    font-style: italic;
-    padding-left: 12%;
-    vertical-align:240%;
-    display: inline;
-    width: 100%;
+    width: 100px;
 }
 #mytable{
-    margin: 0% auto;
+    background-color: var(--font-color);
+    margin: 1% auto;
     width: 80%;
 }
-#th{
+tr{
+    width: auto;
+}
+th{
+    color: var(--main-theme);
+    background-color: var(--element-bg-color);
     width: 40%;
-    background-color: #d6eaf8;
     border-radius: 4px;
-    margin-bottom: 211%;
+}
+#status{
+    width: 10%;
 }
 #item{
-    padding: 2%;
-    width: 40%;
-    background-color: #d6eaf8;
+    vertical-align: middle;
+    background-color: var(--element-bg-color);
+    margin: auto;
+    padding: 1%;
+    height: auto;
+    line-height: auto;
+    width: auto;
     border-radius: 4px;
 }
+#statusitem{
+    text-align: center;
+    background-color: var(--element-bg-color);
+    margin: auto;
+    padding: 2%;
+    height: auto;
+    line-height: auto;
+    width: auto;
+    border-radius: 4px;
+}
+#itemlink{
+    overflow: auto;
+    height: 100%;
+    width: auto;
+}
 #description{
-    font-size: 80%;
+    background-color: var(--element-bg-color);
     padding: 2%;
     width: 60%;
-    background-color: #d6eaf8;
     border-radius: 4px;
 }
 #aboutme{
+    margin: auto 20%;
+    line-height: 2;
+    color: var(--font-color);
+    background-color: var(--element-bg-color);
     border-radius: 4px;
     padding: 2%;
+}
+#mybox{
+    height: 50%;
+    width: 60%;
+    margin: 0% 20%;
+}
+#mysubmitbtn{   
+    padding: .1% .1%;
+    display: block;
+    margin: 0.3% auto;
+    width: 6%;
+}
+#projectname{
+    vertical-align: middle;
+    display: inline;
+}
+#contacttable{
+    text-align: center;
+    border-radius: 3px;
+    background-color: var(--element-bg-color);
+    width: 40%;
+    margin: 2% 30%;
+}
+#contactitem{
+    padding: 3% 10%;
+    width: auto;
+    border-radius: 4px;
+}
+#themebtn{
+    position: absolute;
+    background-color: aqua;
+    top: 5px;
+    right: 5px;
 }
