--- a/docs/style_temp.css
+++ b/docs/style_temp.css
@@ -14,9 +14,10 @@ variables:
 
 */
 :root{
-    --bg-color: #85c1e9;
-    --font-color: #000000;
-    --element-bg-color: #d6eaf8;
+    --bg-color: #323645;
+    --font-color: #AE00FF;
+    --element-bg-color: #B9E09D;
+    --link-color: #940000;
 }
 h1{
     background-color:  var(--element-bg-color);
@@ -32,25 +33,26 @@ nav{
     display: flex;
     text-align: center;
     width: 50%;
-    margin: 0% auto 1% auto;
+    margin: 1% auto;
     padding: 1%;
     border-radius: 8px;
 }
+nav a{
+    font-size: larger;
+    padding: 1%;
+}
 a{
+    color: var(--link-color);
     text-decoration: none;
     height: 100%;
     width: 100%;
-    padding: 1%;
 }
 a:link{
     color: #08334d;
 }
-a:visited{
-    color: #08334d;
-}
 a:hover{
     border-radius: 4px;
-    background-color: rgb(46, 46, 153,0.5);
+    background-color: rgb(46, 46, 153,0.2);
 }
 body{
     background-color: var(--bg-color);
@@ -62,11 +64,6 @@ img{
     border-radius: 4px;
     width: 100px;
 }
-#mytable{
-    background-color: var(--font-color);
-    margin: 1% auto;
-    width: 80%;
-}
 tr{
     width: auto;
 }
@@ -76,8 +73,12 @@ th{
     width: 40%;
     border-radius: 4px;
 }
-#status{
-    width: 10%;
+#mytable{
+    margin: 1% auto;
+    width: 80%;
+}
+    #status{
+        width: 10%;
 }
 #item{
     vertical-align: middle;
@@ -146,8 +147,11 @@ th{
     border-radius: 4px;
 }
 #themebtn{
-    position: absolute;
-    background-color: aqua;
-    top: 5px;
-    right: 5px;
+    width: 2%;
+    position: fixed;
+    top: 20px;
+    right: 3%;
+    border: 0px;
+    background-color: var(--bg-color);
+    color: #323645;
 }
