--- a/docs/style_temp.css
+++ b/docs/style_temp.css
@@ -15,8 +15,8 @@ variables:
 */
 :root{
     --bg-color: #323645;
-    --font-color: #AE00FF;
-    --element-bg-color: #B9E09D;
+    --font-color: #8338ec;
+    --element-bg-color: #BEE5A9;
     --link-color: #940000;
 }
 h1{
@@ -38,17 +38,20 @@ nav{
     border-radius: 8px;
 }
 nav a{
-    font-size: larger;
+    text-decoration: none;
+    color: var(--font-color);
+    font-size: x-large;
     padding: 1%;
 }
 a{
-    color: var(--link-color);
-    text-decoration: none;
+    font-weight: bold;
+    text-decoration: underline;
+    color: var(--font-color);
     height: 100%;
     width: 100%;
 }
 a:link{
-    color: #08334d;
+    color: var(--font-color);
 }
 a:hover{
     border-radius: 4px;
@@ -61,7 +64,7 @@ body{
     font-size: 1em;
 }
 img{
-    border-radius: 4px;
+    border-radius: 50%;
     width: 100px;
 }
 tr{
@@ -72,6 +75,15 @@ th{
     background-color: var(--element-bg-color);
     width: 40%;
     border-radius: 4px;
+}
+ul li{
+    font-size: xx-large;
+    padding-left: 20px;
+    display: inline-block;
+    vertical-align: middle;
+}
+#projhead{
+    width: 20%;
 }
 #mytable{
     margin: 1% auto;
@@ -119,39 +131,113 @@ th{
     border-radius: 4px;
     padding: 2%;
 }
-#mybox{
-    height: 50%;
+textarea{
+    font-size: x-large;
+    height: 30vh;
     width: 60%;
     margin: 0% 20%;
 }
-#mysubmitbtn{   
+#mysubmitbtn{
+    font-size: larger;
+    border-radius: 4px; 
     padding: .1% .1%;
     display: block;
     margin: 0.3% auto;
-    width: 6%;
+    width: 10%;
+    height: 50px;
 }
 #projectname{
     vertical-align: middle;
     display: inline;
 }
 #contacttable{
+    font-size: 200%;
     text-align: center;
     border-radius: 3px;
     background-color: var(--element-bg-color);
     width: 40%;
     margin: 2% 30%;
 }
+#contacttable ul li{
+    display: inline;
+}
 #contactitem{
-    padding: 3% 10%;
+    padding: 2% 8%;
     width: auto;
     border-radius: 4px;
 }
+#contactimg{
+    width: 90%;
+    border-radius: 0%;
+}
+#copynumbtn{
+    width: 5%;
+    border: 0px;
+    background-color: var(--element-bg-color);
+}
+#copynumbtn:hover{
+    opacity: 0.4;
+}
+#copymailbtn{
+    width: 5%;
+    border: 0px;
+    background-color: var(--element-bg-color);
+}
+#copymailbtn:hover{
+    opacity: 0.4;
+}
 #themebtn{
-    width: 2%;
+    width: 4.2%;
     position: fixed;
     top: 20px;
-    right: 3%;
+    left: 10px;
     border: 0px;
     background-color: var(--bg-color);
-    color: #323645;
 }
+#themebtn img{
+    padding: 5%;
+    background-color: var(--element-bg-color);
+    opacity: 0.8;
+}
+#snackbar {
+    visibility: hidden;
+    color: #fff;
+    background-color: #333;
+    min-width: 250px;
+    margin-left: -125px;
+    border-radius: 2px;
+    padding: 16px;
+    text-align: center;
+    left: 50%;
+    bottom: 30px;
+    z-index: 1;
+    position: fixed;
+  }
+  
+  /* This will be activated when the snackbar's class is 'show' which will be added through JS */
+  #snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  /* Animations for fading in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
